Sub Heading Added

--- a/intro.html
+++ b/intro.html
@@ -9,8 +9,18 @@
 <body>
   <h1>Vidit Singh Gautam</h1>
   <p>
-    Head Of web development team
-    </p>
+    <em>
+      Head Of web development team at <strong>RIAC</strong>
+    </em>
+  </p>
+  <p>
+    I am a full stack developer. I love tea.
+  </p>
+  <hr size="3" noshade />
+  <h3>
+    Book And Teachings
+  </h3>
+
 </body>
 
 </html>
