--- a/intro.html
+++ b/intro.html
@@ -20,6 +20,17 @@
   <h3>
     Book And Teachings
   </h3>
+  <ul>
+    <li>
+      Forty Rules Of Love
+      </li>
+      <li>
+        Hold My Hands
+        </li>
+        <li>
+          Omnimus 1
+          </li>
+  </ul>
 
 </body>
 
