Anchor Tag Added

--- a/intro.html
+++ b/intro.html
@@ -10,7 +10,8 @@
   <h1>Vidit Singh Gautam</h1>
   <p>
     <em>
-      Head Of web development team at <strong>RIAC</strong>
+      <img src="vidit_pic.jpg" alt="Vidit pic"/>
+      Head Of web development team at <strong><a href="www.riacognizance.tk"> RIAC</a></strong>
     </em>
   </p>
   <p>
