--- a/intro.html
+++ b/intro.html
@@ -10,7 +10,7 @@
   <h1>Vidit Singh Gautam</h1>
   <p>
     <em>
-      <img src="vidit_pic.jpg" alt="Vidit pic"/>
+      <img src="vidit_pic.jpg" alt="Vidit pic" />
       Head Of web development team at <strong><a href="www.riacognizance.tk"> RIAC</a></strong>
     </em>
   </p>
@@ -24,14 +24,15 @@
   <ul>
     <li>
       Forty Rules Of Love
-      </li>
-      <li>
-        Hold My Hands
-        </li>
-        <li>
-          Omnimus 1
-          </li>
+    </li>
+    <li>
+      Hold My Hands
+    </li>
+    <li>
+      Omnimus 1
+    </li>
   </ul>
+  <a href="Hobbies.html">My Hobbies</a>
 
 </body>
 
