Inserted Tables in HTML

--- a/intro.html
+++ b/intro.html
@@ -7,16 +7,29 @@
 </head>
 
 <body>
-  <h1>Vidit Singh Gautam</h1>
-  <p>
-    <em>
-      <img src="vidit_pic.jpg" alt="Vidit pic" />
-      Head Of web development team at <strong><a href="www.riacognizance.tk"> RIAC</a></strong>
-    </em>
-  </p>
-  <p>
-    I am a full stack developer. I love tea.
-  </p>
+  <table cellspacing="20">
+    <tr>
+      <td>
+        <img src="vidit_pic.jpg" alt="Vidit pic" />
+      </td>
+      <td>
+        <h1>Vidit Singh Gautam</h1>
+        <p>
+          <em>
+
+            Head Of web development team at <strong><a href="www.riacognizance.tk"> RIAC</a></strong>
+          </em>
+        </p>
+        <p>
+          I am a full stack developer. I love tea.
+        </p>
+
+      </td>
+      <td>
+
+      </td>
+    </tr>
+  </table>
   <hr size="3" noshade />
   <h3>
     Book And Teachings
@@ -33,6 +46,43 @@
     </li>
   </ul>
   <a href="Hobbies.html">My Hobbies</a>
+<br />
+<br />
+  <table>
+    <thead>
+      <tr>
+        <td>
+          Name
+        </td>
+        <td>
+          Age
+        </td>
+      </tr>
+
+
+    </thead>
+    <tbody>
+      <tr>
+        <td>
+          ViditSingh
+        </td>
+        <td>
+          19
+        </td>
+      </tr>
+      <tr>
+        <td>
+          Phillip
+        </td>
+        <td>
+          20
+        </td>
+      </tr>
+    </tbody>
+    <tfoot>
+
+    </tfoot>
+  </table>
 
 </body>
 
