--- a/intro.html
+++ b/intro.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Vidit's Personal Site</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -30,7 +31,7 @@
       </td>
     </tr>
   </table>
-  <hr size="3" noshade />
+  <hr/>
   <h3>
     Book And Teachings
   </h3>
@@ -45,7 +46,8 @@
       Omnimus 1
     </li>
   </ul>
-  <a href="Hobbies.html">My Hobbies</a>
+  <hr />
+
   <br />
   <br />
   <table>
@@ -58,8 +60,6 @@
           Age
         </td>
       </tr>
-
-
     </thead>
     <tbody>
       <tr>
@@ -83,6 +83,8 @@
 
     </tfoot>
   </table>
+  <hr />
+  <a href="Hobbies.html">My Hobbies</a>
 
 </body>
 
